# model_compiler_for_papyrusrt

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  libumlrts.cmake  papyrusrt.bat  papyrusrt.sh
.github/workflows/: smoke_test.yml
build_configuration/: top_build_configuration.xml
build_configuration/AliceAndBob/: AliceAndBob.xml
build_configuration/AliceAndBobWithProxy/: AliceAndBobWithProxy.xml
build_configuration/AliceAndBobWithThreads/: AliceAndBobWithThreads.xml
build_configuration/SimpleClasses/: SimpleClasses.xml
build_configuration/libAliceAndBobProxy/: libAliceAndBobProxy.xml
doc/development/10_requirements/: requirements.md
doc/development/20_design/: design.md
doc/user_guide/: example_project_explanation.md  how_to_integrate_the_model_compiler.md  sample_project_explanation.md
doc/user_guide/image/: alice_and_bob_sd.puml  overview_example_project.puml  overview_sample_project.puml
model/: .gitignore  Example.notation  Example.uml  Sample.notation  Sample.uml
model_compiler_for_papyrusrt/: .gitignore  setup.py
model_compiler_for_papyrusrt/model_compiler_for_papyrusrt/: __main__.py  application.py
model_compiler_for_papyrusrt/model_compiler_for_papyrusrt/build_configuration/: build_configuration.py  top_build_configuration.py
model_compiler_for_papyrusrt/model_compiler_for_papyrusrt/generator/: papyrusrt_codegen_wrapper.py  target_specific_cmakelists_generator.py  target_specific_generator.py  top_cmakelists_generator.py  top_generator.py
model_compiler_for_papyrusrt/test/: test_application.py
(+34 files in other folders)
